# mk48

./: .gitignore  .gitmodules  CONTRIBUTING.md  Makefile  NOTE.md  README.md  client_static  docker-compose.yml  download_makefiles.sh  go.mod  go.sum  submodules.sh
client/: .gitignore  Cargo.toml  Dockerfile  Makefile  Trunk.toml  index.dev.html  index.html  package-lock.json  package.json  sitemap.xml  svelte.config.js  textures.minicdn
client/.cargo/: config.toml
client/data/: manifest.json
client/shaders/: background.frag  background.vert  particle.frag  particle.vert  sprite.frag  sprite.vert  text.frag  text.vert
client/src/: animation.rs  app.html  armament.rs  audio.rs  background.rs  buffer.rs  camera.rs  deque.rs  game.rs  input.rs  interpolated.rs  interpolated_contact.rs  lib.rs  licenses.rs  main.rs  particle.rs  renderer.rs  settings.rs  shader.rs  sortable_sprite.rs  sprite.rs  sprites_audio.json  sprites_webgl.json  state.rs  tessellation.rs  text_cache.rs  texture.rs  trail.rs  translation.rs  ui.rs  util.rs  weather.rs  web_socket.rs  zoom.rs
client/src/data/: .gitignore  entities-raw.json  entities.json  entities.tps.json  extras.tps.json  preprocess.js  sounds.json  spritesheet.json  strings.json
client/src/lib/: Armaments.svelte  Chat.svelte  EntityCard.svelte  Hint.svelte  IconButton.svelte  Instructions.svelte  Leaderboard.svelte  Link.svelte  Meter.svelte  Page.svelte  Section.svelte  Ship.svelte  Sidebar.svelte  SplashScreen.svelte  Status.svelte  Teams.svelte  Upgrades.svelte  background.js  hud.js  particles.js  physics.js  recording.js  settings.js  socket.js  teams.js  textures.js  translation.js
client/src/routes/: about.svelte  changelog.svelte  help.svelte  index.svelte  privacy.svelte  ships.svelte  terms.svelte
client/src/shaders/: background.frag  background.vert  background_shadow.vert  overlay.frag  overlay.vert  particle.frag  particle.vert  shadow.frag  sprite.frag  sprite.vert
client/src/ui/: about_dialog.rs  changelog_dialog.rs  game_ui.rs  help_dialog.rs  hint.rs  instructions.rs  levels_dialog.rs  logo.rs  mod.rs  phrases.rs  references_dialog.rs  respawn_overlay.rs  settings_dialog.rs  ship_controls.rs  ship_menu.rs  ships_dialog.rs  sprite.rs  sprites_css.json  status_overlay.rs  team.rs  upgrade_overlay.rs
client/src/util/: compatibility.js  math.js  storage.js  strings.js
client/static/: manifest.json  robots.txt  server_worker.js
common/: Cargo.toml
common/benches/: benchmark.rs
common/src/: altitude.rs  angle.rs  complete.rs  contact.rs  death_reason.rs  entities.json  entity.rs  guidance.rs  lib.rs  protocol.rs  terrain.rs  ticks.rs  transform.rs  util.rs  velocity.rs  world.rs
common/src/entity/: _type.rs  armament.rs  data.rs  exhaust.rs  kind.rs  sensor.rs  sub_kind.rs  turret.rs
core/client_util/: Cargo.toml
core/client_util/src/: lib.rs  rate_limiter.rs  reconn_web_socket.rs
core/core/: Cargo.toml  Makefile  build.rs
core/core/src/: .gitignore  admin.rs  app.rs  arena.rs  bot.rs  chat.rs  client.rs  core.rs  database.rs  generate_id.rs  invitation.rs  lib.rs  main.rs  metrics.rs  notify_set.rs  repo.rs  server.rs  session.rs  team.rs  user_agent.rs
core/core/static/: index.html
core/core_protocol/: Cargo.toml
core/core_protocol/src/: angle.rs  dto.rs  id.rs  lib.rs  metrics.rs  name.rs  rpc.rs  serde_util.rs  web_socket.rs
core/servutil/: Cargo.toml  README.md
core/servutil/src/: app.rs  benchmark.rs  lib.rs  linode.rs  ssl.rs  user_agent.rs  watchdog.rs  web_socket.rs
engine/: .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile
engine/.cargo/: config.toml
engine/client_util/: Cargo.toml
engine/client_util/src/: apply.rs  audio.rs  browser_storage.rs  context.rs  (+19 more)
engine/common_util/: Cargo.toml
engine/core_protocol/: Cargo.toml  README.md
engine/core_server/: Cargo.toml  Makefile  README.md
engine/engine_macros/: Cargo.toml
engine/game_server/: Cargo.toml  build.rs
engine/game_terraform/: core.tf  dns.tf  linode.tf  provider.tf  server_init.sh  variable.tf
engine/js/: package-lock.json  package.json
engine/js_hooks/: Cargo.toml
engine/licensing/: Cargo.toml
engine/renderer/: Cargo.toml
engine/renderer2d/: Cargo.toml
engine/renderer3d/: Cargo.toml
engine/server_util/: Cargo.toml
engine/sprite_sheet/: Cargo.toml
engine/sprite_sheet_util/: .gitignore  Cargo.toml
engine/terraform/: .gitignore  dynamodb.tf  firewall.tf  iam.tf  provider.tf  s3.tf  variable.tf
engine/upload_game_client/: Cargo.toml
engine/yew_frontend/: Cargo.toml  Makefile
macros/: Cargo.toml
macros/src/: entity_type.rs  lib.rs
server/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  bot_client.go  bot_names.go  chat_history.go  client.go  cloud.go  debug.go  despawn.go  entities.json  go.mod  go.sum  http.go  hub.go  inbound.go  jsoniter.go  jsoniter_test.go  leaderboard.go  leaderboard_test.go  log.go  main.go  message.go  mk48-server.service  names.txt  outbound.go  physics.go  player.go  socket_client.go  spawn.go  spoke.go  team-names.txt  team.go  update.go  util.go
server/cloud/: aws.go  cloud.go
server/src/: arena.rs  bot.rs  collision.rs  complete_ref.rs  contact_ref.rs  entities.rs  entity.rs  entity_extension.rs  main.rs  noise.rs  ordered_set.rs  player.rs  protocol.rs  server.rs  team.rs  terrain_pool.rs  ups_monitor.rs  world.rs  world_inbound.rs  world_mutation.rs  world_outbound.rs  world_physics.rs  world_physics_radius.rs  world_spawn.rs  world_test.rs
server/terrain/: altitude.go  buffer.go  buffer_test.go  chunk.go  data.go  height.go  render.go  terrain.go  util.go
server/world/: aabb.go  angle.go  angle_test.go  collision.go  collision_test.go  death_reason.go  entities.json  entity.go  entity_data.go  entity_data_loader.go  entity_id.go  extension.go  extension_safe.go  extension_unsafe.go  guidance.go  player.go  preprocess.mjs  team.go  team_test.go  ticks.go  transform.go  util.go  vec2f.go  vec2f_test.go  velocity.go  world.go
sprite_sheet_packer/: Cargo.toml  README.md
sprite_sheet_packer/src/: audio.rs  main.rs  texture.rs
(+825 files in other folders)
