[package]
name = "client"
version = "0.1.0"
authors = ["Softbear, Inc."]
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = "fat"
opt-level = 's'
codegen-units = 1

[dependencies]
js-sys = "0.3"
wasm-bindgen = {version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
serde = "1.0"
serde_json = "1.0"
serde-wasm-bindgen = "0.3"
glam = {version="0.18", features=["scalar-math"]}
common = {path="../common", features=["js"]}
instant = { version = "0.1.10", features = [ "wasm-bindgen" ] }
rand = "0.8"
client_util = {path="../engine/client_util"}
common_util = {path="../engine/common_util"}
core_protocol = {path="../engine/core_protocol"}
arrayvec = "0.7"
sprite_sheet = {path="../engine/sprite_sheet"}
engine_macros = {path="../engine/engine_macros"}
itertools = "0.10"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'AudioContext',
    'AudioBuffer',
    'AudioParam',
    'AudioDestinationNode',
    'AudioBufferSourceNode',
    'AudioContextState',
    'GainNode',
    'BinaryType',
    'Blob',
    'CanvasRenderingContext2d',
    'CloseEvent',
    'Document',
    'Element',
    'ErrorEvent',
    'FileReader',
    'HtmlCanvasElement',
    'HtmlImageElement',
    'KeyboardEvent',
    'Location',
    'MessageEvent',
    'MouseEvent',
    'OesVertexArrayObject',
    'OesStandardDerivatives',
    'ProgressEvent',
    'TextMetrics',
    'WebGlBuffer',
    'WebGlProgram',
    'WebGlRenderingContext',
    'WebGlShader',
    'WebGlTexture',
    'WebGlUniformLocation',
    'WebGlVertexArrayObject',
    'WebSocket',
    'Window',
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
]
