[package]
name = "client"
version = "0.1.0"
authors = ["Softbear, Inc."]
edition = "2021"
license = "AGPL-3.0-or-later"

[profile.release]
lto = "fat"
opt-level = 's'
codegen-units = 1

[dependencies]
arrayvec = "0.7"
bytemuck = "1.9"
client_util = { path = "../engine/client_util" }
common = { path = "../common", features = [ "js" ] }
common_util = { path = "../engine/common_util", features = [ "rand" ] }
console_error_panic_hook = "0.1"
core_protocol = { path = "../engine/core_protocol"}
engine_macros = { path = "../engine/engine_macros" }
getrandom = { version = "0.2", features = [ "js" ] }
glam = { version = "0.18", features = [ "scalar-math" ] }
instant = { version = "0.1.10", features = [ "wasm-bindgen" ] }
itertools = "0.10"
js-sys = "0.3"
js_hooks = { path = "../engine/js_hooks" }
lazy_static = "1.4"
rand = "0.8"
renderer = { path = "../engine/renderer", features = [ "srgb", "webgl2" ] }
renderer2d = { path = "../engine/renderer2d" }
renderer3d = { path = "../engine/renderer3d", features = [ "shadow" ] }
serde = "1.0"
serde-wasm-bindgen = "0.3"
serde_json = "1.0"
sprite_sheet = { path = "../engine/sprite_sheet" }
stylist = "0.11"
wasm-bindgen = { version = "0.2", features = [ "serde-serialize" ] }
wasm-bindgen-futures = "0.4"
yew = "0.20"
yew-router = "0.17"
yew_frontend = { path = "../engine/yew_frontend" }
yew_icons = { version = "0.7", features = [ "BootstrapSnow2", "BootstrapLockFill", "BootstrapUnlockFill", "OcticonsVideo16" ] }

[dependencies.web-sys]
version = "0.3"
features = [
    'CssStyleDeclaration',
    'HtmlDivElement',
    'MouseEvent',
]
