[package]
authors = ["Softbear, Inc."]
edition = "2021"
license = "AGPL-3.0-or-later"
name = "client"
version = "0.1.1"

[profile.release]
lto = "fat"
opt-level = 's'
codegen-units = 1

[patch.crates-io]
yew-router = { git = "https://github.com/finnbear/yew", package = "yew-router", branch = "dynamic_basename_2_hack_2" }

[dependencies]
bytemuck = "1.9"
common = { path = "../common", features = [ "js" ] }
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = [ "js" ] }
instant = { version = "0.1.10", features = [ "wasm-bindgen" ] }
itertools = "0.10"
kodiak_client = { features = [ "audio", "music", "high_contrast_setting", "renderer_srgb", "renderer_webgl2", "renderer2d", "renderer3d_shadow" ], git = "https://github.com/softbearstudios/kodiak", tag="0.1.1" }
lazy_static = "1.4"
minicdn = { version = "0.2.1", default-features = false } # Version and features set via core_protocol.
serde_json = "1.0"
strum_macros = "0.25"
strum = "0.25"
stylist = "0.13"
yew = "0.21"
yew_icons = { version = "0.8", features = [ "BootstrapSnow2", "BootstrapLockFill", "BootstrapUnlockFill", "OcticonsVideo16" ] }

[dependencies.web-sys]
version = "0.3.72"
features = [
    'CssStyleDeclaration',
    'HtmlDivElement',
    'MouseEvent',
]
