[package]
name = "common"
version = "0.1.0"
edition = "2018"
authors = [ "Softbear, Inc." ]
license = "AGPL-3.0-or-later"

[dependencies]
arrayvec = { version = "0.7", features = [ "serde" ] }
actix = { version="0", optional = true}
rand = "0.8"
glam = { version = "0.18", features = [ "serde" ] }
serde = { version = "1.0", features = [ "derive", "rc" ] }
serde_json = "1.0"
macros = { path = "../macros" }
fast_hilbert = { version = "1.0.1-alpha.0", git = "https://github.com/finnbear/fast-hilbert" }
lazy_static = "1.4"
enum-iterator = "0.7"
core_protocol = { path = "../engine/core_protocol" }
common_util = { path = "../engine/common_util", features = [ "rand" ] }
serde_bytes = "0.11"
bincode = "1.3.3"
bitvec = "1.0.0"

[features]
server = [ "actix" ]
js = []
