[package]
authors = ["Softbear, Inc."]
edition = "2021"
license = "AGPL-3.0-or-later"
name = "common"
version = "0.1.0"

[dependencies]
actix = { version = "0", optional = true }
bincode = "1.3.3"
bitvec = "1.0.0"
fast_hilbert = { version = "1.0.1-alpha.0", git = "https://github.com/finnbear/fast-hilbert" }
kodiak_common = { features = [ "bitcode_glam", "glam_serde" ], git = "https://github.com/softbearstudios/kodiak", tag="0.1.0" }
lazy_static = "1.4"
macros = { path = "../macros" }
serde_bytes = "0.11"
strum = { version = "0.24.1", features = [ "derive" ] }

[features]
server = [ "actix" ]
js = []
