[package]
name = "macros"
version = "0.1.0"
edition = "2018"
license = "AGPL-3.0-or-later"


[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.9"
syn = "1.0.74"
litrs = "0.2.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.66"
proc-macro2 = "1.0.28"
convert_case = "0.4.0"
