[package]
name = "macros"
version = "0.1.0"
edition = "2021"
authors = ["Softbear, Inc."]
license = "AGPL-3.0-or-later"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common_util = {path = "../engine/common_util"}
glam = "0.18"
quote = "1.0"
syn = "1.0"
litrs = "0.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
proc-macro2 = "1.0"
convert_case = "0.4"