[package]
authors = ["Softbear, Inc."]
edition = "2021"
license = "AGPL-3.0-or-later"
name = "macros"
version = "0.1.0"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kodiak_common = { git = "https://github.com/softbearstudios/kodiak", tag="0.1.0" }
quote = "1.0"
syn = "1.0"
litrs = "0.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
proc-macro2 = "1.0"
convert_case = "0.4"
