[package]
name = "server"
version = "0.1.0"
edition = "2018"
authors = ["Softbear, Inc."]
license = "AGPL-3.0-or-later"

[profile.release]
debug = true
#lto = true
#codegen-units=1

#[profile.release.package.game_server]
#debug = true

[profile.release.package."*"]
debug = false

# An attempt to speed up various operations at the beginning of runtime.
[profile.dev.package.regex]
opt-level = 3
[profile.dev.package.png]
opt-level = 3
[profile.dev.package.libwebp-sys]
opt-level = 3
[profile.dev.package.flate2]
opt-level = 3
[profile.dev.package.adler]
opt-level = 3
[profile.dev.package.sha2]
opt-level = 3
[profile.dev.package.miniz_oxide]
opt-level = 3

[dependencies]
glam = { version = "0.18", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
serde_bytes = "0.11"
atomic_refcell = "0.1"
arrayvec = {version = "0.7", features = [ "serde" ] }
rand = "0.8"
idalloc = "0.1"
noise = { version = "0.7", default-features = false }
common = {path="../common", version="0.1", features=["server"]}
common_util = {path="../engine/common_util", features=["rand"]}
game_server = {path="../engine/game_server"}
core_protocol = {path="../engine/core_protocol"}
server_util = {path="../engine/server_util"}
maybe_parallel_iterator = {version = "0.10.0", features = []}
ringbuffer = "0.8"
log = {version = "0.4", features = [ "release_max_level_info" ] }
env_logger = "0.9"
lazy_static = "1"
rustrict = {version = "0", features=["customize"], default-features=false}
bitvec = "1.0.0"
minicdn = "0.1"
tokio = "1"

[dev-dependencies]
image = { version = "0.24", features = [ "png" ], default-features=false }
imageproc = "0.23.0"