[package]
name = "sprite_sheet_packer"
version = "0.1.0"
edition = "2018"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path="../common"}
sprite_sheet = {path="../sprite_sheet"}
image = "0.23.14"
crunch = "0.3.3"
serde = "1.0.130"
serde_json = "1.0.67"
oxipng = "5.0.0"
glam = "0.18.0"
webp = "0.1.3"
rayon = "1.5.1"
lazy_static = "1.4.0"