[package]
name = "sprite_sheet_packer"
version = "0.1.0"
edition = "2021"
authors = ["Softbear, Inc."]
license = "AGPL-3.0-or-later"

[features]
audio = []
default = [ "audio" ]

[dependencies]
common = { path = "../common" }
common_util = { path = "../engine/common_util" }
glam = "0.18.0"
image = "0.23.14"
rayon = "1.5.1"
sprite_sheet = { path = "../engine/sprite_sheet" }
sprite_sheet_util = { path = "../engine/sprite_sheet_util" }
