[package]
name = "client_util"
version = "0.1.0"
edition = "2018"
authors = ["Softbear, Inc."]
license = "AGPL-3.0-or-later"

[dependencies]
wasm-bindgen = "0.2"
core_protocol = {path="../core_protocol"}
glam = "0.18"
serde = "1.0"
serde_json = "1.0"
js-sys = "0.3"
bincode = "1.3.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'BinaryType',
    'Blob',
    'CloseEvent',
    'Document',
    'Element',
    'MessageEvent',
    'ErrorEvent',
    'FileReader',
    'Location',
    'WebSocket',
    'Window',
]
