[package]
name = "core"
version = "0.1.0"
authors = ["Cory Bear <gitlog@corybear.com>"]
edition = "2018"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "core"
path = "src/lib.rs"

[[bin]]
name = "core_server"
path = "src/main.rs"

[dependencies]
actix = "0.12"
actix-codec = "0.4"
actix-service = "2.0.0"
actix-web = "4.0.0-beta.9"
actix-web-actors = "4.0.0-beta.7"
actix-files = "0.6.0-beta.7"
arrayvec = "0.7.1"
awc = "2"
bytes = "0.5.3"
csv = "1.1.6"
chrono = { version = "0.4.19", features = ["serde"] }
core_protocol = {path="../core_protocol", features=["server"] }
servutil = {path="../servutil" }
enum-iterator = "0.7.0"
env_logger = "0.8"
futures = "0.3.1"
rand = "0.8.4"
serde = { version = "1.0.126", features = ["derive", "rc"] }
serde_json = "1.0.64"
lazy_static = "1.4.0"
rustrict = "0.1.1"
ringbuffer = "0.8.2"
log = "0.4.14"
aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "main", package = "aws-config" }
aws-sdk-dynamodb = { git = "https://github.com/awslabs/aws-sdk-rust", branch="main", package = "aws-sdk-dynamodb" }
serde_dynamo = { git = "https://github.com/zenlist/serde_dynamo", branch = "3.0.0-alpha.0", default_features=false, features=["aws_sdk"] }
variant_count = "1.1.0"
tokio = "0.2"
