[package]
name = "core_protocol"
version = "0.1.0"
authors = ["Cory Bear <gitlog@corybear.com>"]
edition = "2018"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = {version="0.12.0", optional = true}
arrayvec = { version = "0.7.1", features = ["serde"] }
chrono = { version = "0.4.19", features = ["serde"] }
enum-iterator = "0.7.0"
serde = { version = "1.0.126", features = ["derive", "rc"] }
glam = { version = "0.18.0", features = ["serde"] }
variant_count = "1.1.0"
rand = "0.8.4"
unicode_categories = "0.1"

[features]
server = ["actix"]
