[package]
name = "servutil"
version = "0.1.0"
edition = "2018"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12"
actix-web = "4.0.0-beta.10"
actix-web-actors = "4.0.0-beta.7"
arrayvec = { version = "0.7.1", features = ["serde"] }
atomic_refcell = "0.1.7"
bincode = "1.3.3"
core_protocol = {path="../core_protocol", features=["server"] }
lazy_static = "1.4.0"
ringbuffer = "0.8.2"
rustls = "0.20"
rustls-pemfile = "0.2.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
x509-parser = "0.11.0"
log = "0.4.14"
