[package]
name = "servutil"
version = "0.1.0"
edition = "2018"
authors = ["Softbear, Inc."]
license = "AGPL-3.0-or-later"

[dependencies]
actix = "0.12"
actix-web = "4.0.0-beta.14"
actix-tls = "3.0.0-rc.2"
actix-files = "0.6.0-beta.10"
actix-http = "3.0.0-beta.15"
actix-web-actors = "4.0.0-beta.8"
awc = {version = "3.0.0-beta.12", features = ["rustls"]}
actix-plus-static-files = {git="https://github.com/finnbear/actix-plus", branch="actix-web-4"}
include_dir = "0.6"
async-trait = "0.1"
arrayvec = { version = "0.7", features = ["serde"] }
atomic_refcell = "0.1"
bincode = "1.3.3"
num_cpus = "1.13"
core_protocol = {path="../core_protocol", features=["server"] }
lazy_static = "1.4"
rustls = "0.20"
rustls-pemfile = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
x509-parser = "0.12"
log = "0.4"
futures = "0.3"
tokio = "1"
