[package]
name = "client_util"
version = "0.1.0"
edition = "2018"
authors = ["Softbear, Inc."]
license = "AGPL-3.0-or-later"

[dependencies]
wasm-bindgen = "0.2"
core_protocol = {path="../core_protocol"}
glam = "0.18"
serde = "1.0"
serde_json = "1.0"
js-sys = "0.3"
bincode = "1.3.3"
common_util = {path = "../common_util"}
sprite_sheet = {path = "../sprite_sheet"}
serde-wasm-bindgen = "0.4"
engine_macros = {path = "../engine_macros" }
variant_count = "1.1"
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'AudioBuffer',
    'AudioBufferSourceNode',
    'AudioDestinationNode',
    'AudioContext',
    'AudioContextState',
    'AudioParam',
    'GainNode',
    'Response',
    'BinaryType',
    'Blob',
    'CanvasRenderingContext2d',
    'CloseEvent',
    'Document',
    'DomRect',
    'Element',
    'ErrorEvent',
    'Event',
    'FileReader',
    'FocusEvent',
    'HtmlCanvasElement',
    'HtmlInputElement',
    'HtmlImageElement',
    'KeyboardEvent',
    'OesVertexArrayObject',
    'OesStandardDerivatives',
    'Location',
    'Storage',
    'TextMetrics',
    'Touch',
    'TouchEvent',
    'TouchList',
    'MessageEvent',
    'WebGlBuffer',
    'WebGlFramebuffer',
    'WebGlProgram',
    'WebGlRenderingContext',
    'WebGlShader',
    'WebGlShaderPrecisionFormat',
    'WebGlTexture',
    'WebGlUniformLocation',
    'WebGlVertexArrayObject',
    'WebSocket',
    'WheelEvent',
    'Window',
]
