[package]
name = "client_util"
version = "0.1.0"
edition = "2021"
authors = ["Softbear, Inc."]
license = "AGPL-3.0-or-later"

[features]
default = ["audio"]
audio = [
    "web-sys/AudioBuffer",
    "web-sys/AudioBufferSourceNode",
    "web-sys/AudioDestinationNode",
    "web-sys/AudioContext",
    "web-sys/AudioContextState",
    "web-sys/AudioParam",
    "web-sys/GainNode",
]

[dependencies]
wasm-bindgen = "0.2"
core_protocol = {path="../core_protocol"}
# Use scalar-math feature to avoid alignment requirements that break GL compatibility.
glam = {version = "0.18", features = [ "scalar-math", "bytemuck" ]}
getrandom = {version = "0.2", features = ["js"]}
serde = "1.0"
serde_json = "1.0"
js-sys = "0.3"
bincode = "1.3.3"
common_util = {path = "../common_util"}
sprite_sheet = {path = "../sprite_sheet"}
serde-wasm-bindgen = "0.4"
engine_macros = {path = "../engine_macros" }
variant_count = "1.1"
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"
serde_urlencoded = "0.7"
bytemuck = { version = "1.9.1", features = [ "derive" ] }

[dependencies.web-sys]
version = "0.3.4"
features = [
    'AngleInstancedArrays',
    'Response',
    'BinaryType',
    'Blob',
    'CanvasRenderingContext2d',
    'CloseEvent',
    'Document',
    'DomRect',
    'Element',
    'ErrorEvent',
    'Event',
    'FileReader',
    'FocusEvent',
    'HtmlCanvasElement',
    'HtmlInputElement',
    'HtmlImageElement',
    'KeyboardEvent',
    'OesElementIndexUint',
    'OesVertexArrayObject',
    'OesStandardDerivatives',
    'Location',
    'Storage',
    'TextMetrics',
    'Touch',
    'TouchEvent',
    'TouchList',
    'UrlSearchParams',
    'VisibilityState',
    'MessageEvent',
    'WebGlBuffer',
    'WebGlFramebuffer',
    'WebGlProgram',
    'WebGlRenderingContext',
    'WebGlShader',
    'WebGlShaderPrecisionFormat',
    'WebGlTexture',
    'WebGlUniformLocation',
    'WebGlVertexArrayObject',
    'WebSocket',
    'WheelEvent',
    'Window',
]
