[package]
name = "client_util"
workspace = ".."
version = "0.1.0"
edition = "2021"
authors = ["Softbear, Inc."]
license = "AGPL-3.0-or-later"

[features]
audio = [
    "web-sys/AudioBuffer",
    "web-sys/AudioBufferSourceNode",
    "web-sys/AudioContext",
    "web-sys/AudioContextState",
    "web-sys/AudioDestinationNode",
    "web-sys/AudioParam",
    "web-sys/GainNode",
]
default = [ "audio", "joined" ]
joined = []
json = [ "core_protocol/json", "dep:serde_json" ]
rand = [ "getrandom" ]

[dependencies]
bincode = "1.3.3"
common_util = { path = "../common_util" }
console_error_panic_hook = "0.1"
core_protocol = { path = "../core_protocol" }
engine_macros = { path = "../engine_macros" }
getrandom = { version = "0.2", features = [ "js" ], optional = true }
glam = "0.18"
heapless = { version = "0.7", default-features = false }
js-sys = "0.3"
js_hooks = { path = "../js_hooks" }
linear-map = "1.2.0"
rc_borrow_mut = { git = "https://github.com/finnbear/rc_borrow_mut" }
serde = "1.0"
serde_json = { version = "1.0", optional = true, features = [ "float_roundtrip" ] }
serde_urlencoded = "0.7"
sprite_sheet = { path = "../sprite_sheet" }
strum_macros = "0.24"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'BinaryType',
    'Blob',
    'CloseEvent',
    'DomRect',
    'Element',
    'ErrorEvent',
    'Event',
    'FileReader',
    'FocusEvent',
    'HtmlInputElement',
    'KeyboardEvent',
    'Location',
    'MessageEvent',
    'Response',
    'Storage',
    'Touch',
    'TouchEvent',
    'TouchList',
    'UrlSearchParams',
    'VisibilityState',
    'WebSocket',
    'WheelEvent',
]
