[package]
name = "core_protocol"
version = "0.1.0"
authors = ["Softbear, Inc."]
edition = "2018"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = {version="0.12", optional = true}
arrayvec = { version = "0.7", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
enum-iterator = "0.7"
serde = { version = "1.0", features = ["derive", "rc"] }
glam = { version = "0.18", features = ["serde"] }
variant_count = "1.1"
rand = "0.8"
unicode_categories = "0.1"
rustrict = {version = "0", default-features = false, features=["censor"]}
lazy_static = "1.4"

[features]
server = ["actix", "rustrict/censor"]
