[package]
name = "core_protocol"
version = "0.1.0"
authors = ["Softbear, Inc."]
edition = "2018"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = {version="0.13", optional = true}
arrayvec = { version = "0.7", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
enum-iterator = "0.7"
serde = { version = "1.0", features = ["derive", "rc"] }
glam = { version = "0.18", features = ["serde"] }
variant_count = "1.1"
rand = "0.8"
unicode_categories = "0.1"
rustrict = {version = "0.4.18", default-features = false}
lazy_static = "1.4"
# Must sync features with game_server
minicdn = {version = "0.1.13", features = ["mime", "etag", "gzip", "brotli", "webp", "serde"], optional = true}

[features]
admin = ["minicdn"]
server = ["actix", "admin", "rustrict/censor", "rustrict/width"]
