[package]
name = "core_protocol"
workspace = ".."
version = "0.1.0"
authors = ["Softbear, Inc."]
edition = "2018"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = { version = "0.13", optional = true }
arrayvec = { version = "0.7", features = [ "serde" ] }
minicdn = { version = "0.1.17", features = [ "mime", "etag", "gzip", "brotli", "webp", "serde", "config" ], optional = true } # Must sync features with game_server
rand = { version = "0.8", optional = true }
rustrict = { version = "0.5.10", default-features = false, optional = true }
serde = { version = "1.0", features = [ "derive" ] }
strum = { version = "0.24", features = [ "derive" ] }

[features]
admin = [ "minicdn" ]
json = []
server = [ "dep:actix", "admin", "rustrict/censor", "rustrict/width", "dep:rand", "serde/rc" ]
