[package]
name = "engine_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
convert_case = "0.5"
litrs = "0.2"
sprite_sheet = {path = "../sprite_sheet"}
serde_json = "1.0"