[package]
name = "engine_macros"
workspace = ".."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
emojis = "0.5.1"
bytemuck = "1.12"
convert_case = "0.5"
itertools = "0.10.5"
litrs = "0.2"
nom = "7.1"
proc-macro2 = "1.0"
quote = "1.0"
serde_json = "1.0"
sprite_sheet = { path = "../sprite_sheet" }
syn = "1.0"
