[package]
name = "game_server"
version = "0.1.0"
edition = "2018"
authors = ["Softbear, Inc."]
license = "AGPL-3.0-or-later"

[patch.crates-io]
# crates.io not up to date (see https://github.com/swgillespie/unicode-categories/issues/12)
unicode_categories = { git = "https://github.com/swgillespie/unicode-categories" }

[dependencies]
connection_leak_detector = {version = "0.1.6", optional = true}
axum = {version = "0.4", features=["headers", "ws"]}
axum-server = {git="https://github.com/finnbear/axum-server.git", branch="custom", version = "0.3", features=["tls-rustls"]}
tower = "0.4"
tower-http = {version = "0.2.4", features=["cors"]}
hyper = {version = "0", features=["runtime"]}
reqwest = "0.11"
bincode = "1.3.3"
mime_guess = "2.0"
rust-embed = "6"
bytes = "1"
webp = "0.2"
image = { version = "0.24", features = [ "png", "jpeg" ], default-features=false }
flate2 = "1"
hex = "0.4"
actix = "0.13"
include_dir = "0.6"
arrayvec = { version = "0.7", features = ["serde"] }
atomic_refcell = "0.1"
core_protocol = {path="../core_protocol", features=["server"]}
heapless = "0.7"
common_util = {path="../common_util"}
server_util = {path="../server_util"}
serde = {version = "1", features=["derive"]}
serde_json = "1.0"
rustrict = {version = "0.4.15", features=["context"], default-features=false}
log = "0.4"
maybe_parallel_iterator = {version = "0.10.0", features = []}
structopt = "0.3"
futures = "0.3"
env_logger = "0.9"
idalloc = "0.1"
constant_time_eq = "0.1"
db_ip = "0.3"
lazy_static = "1.4"
csv = "1.1"
rand = "0.8"
tokio = "1"

[target.'cfg(unix)'.dependencies]
nix = "0.23"
pprof = {version = "0.6.2", features=["flamegraph"]}

[build-dependencies]
rand = "0.8"
base64 = "0.13"
rcgen = "0.9"
