[package]
name = "game_server"
version = "0.1.0"
edition = "2018"
authors = ["Softbear, Inc."]
license = "AGPL-3.0-or-later"

[patch.crates-io]
# crates.io not up to date (see https://github.com/swgillespie/unicode-categories/issues/12)
unicode_categories = { git = "https://github.com/swgillespie/unicode-categories" }
# https://github.com/hyperium/hyper/pull/2891
# hyper = {git = "https://github.com/hyperium/hyper"}

[dependencies]
axum = {version = "0.5.13", features=["headers", "ws"]}
axum-server = {version = "0.4", features=["tls-rustls"]}
tower = "0.4"
tower-http = {version = "0.3", features=["cors"]}
hyper = {version = "0", features=["runtime"]}
oauth2 = "4.2"
reqwest = "0.11"
bincode = "1.3.3"
rust-embed = "6"
# Version and features set via core_protocol.
minicdn = "0.1.13"
bytes = "1"
image = { version = "0.24", features = [ "png" ], default-features=false }
actix = "0.13"
arrayvec = { version = "0.7", features = ["serde"] }
atomic_refcell = "0.1"
core_protocol = {path="../core_protocol", features=["server"]}
heapless = "0.7"
common_util = {path="../common_util"}
server_util = {path="../server_util"}
serde = {version = "1", features=["derive"]}
serde_json = "1.0"
rustrict = {version = "0.4.18", features=["context"], default-features=false}
log = "0.4"
maybe_parallel_iterator = {version = "0.10.0", features = []}
structopt = "0.3"
futures = "0.3"
env_logger = "0.9"
idalloc = "0.1"
constant_time_eq = "0.2"
db_ip = "0.3"
lazy_static = "1.4"
csv = "1.1"
rand = "0.8"
tokio = "1"

[target.'cfg(unix)'.dependencies]
nix = "0.23"
pprof = {version = "0.6.2", features=["flamegraph"]}

[build-dependencies]
rand = "0.8"
base64 = "0.13"
rcgen = "0.9"
