[package]
name = "js_hooks"
workspace = ".."
version = "0.1.0"
edition = "2021"
authors = ["Softbear, Inc."]
license = "AGPL-3.0-or-later"

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'Document',
    'HtmlCanvasElement',
    'Window',
]
