[package]
name = "renderer"
workspace = ".."
version = "0.1.0"
edition = "2021"
authors = ["Softbear, Inc."]
license = "AGPL-3.0-or-later"

[features]
anisotropy = [ "web-sys/ExtTextureFilterAnisotropic" ]
blocking = [] # Waits for shaders to compile before rendering.
depth_texture = []
srgb = [ "dep:srgb", "web-sys/ExtSRgb" ]
webgl2 = [ "web-sys/WebGl2RenderingContext" ]

[dependencies]
bincode = "1.3.3"
bytemuck = { version = "1.9.1", features = [ "derive" ] }
engine_macros = { path = "../engine_macros" }
glam = { version = "0.18", features = [ "scalar-math", "bytemuck" ] } # Use scalar-math feature to avoid alignment requirements that break GL compatibility.
js-sys = "0.3"
js_hooks = { path = "../js_hooks" }
linear-map = "1.2.0"
srgb = { version = "0.1.0", optional = true }
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'AngleInstancedArrays',
    'CanvasRenderingContext2d',
    'Document',
    'HtmlCanvasElement',
    'HtmlImageElement',
    'OesElementIndexUint',
    'OesStandardDerivatives',
    'OesVertexArrayObject',
    'TextMetrics',
    'WebGlBuffer',
    'WebGlFramebuffer',
    'WebGlProgram',
    'WebGlRenderbuffer',
    'WebGlRenderingContext',
    'WebGlShader',
    'WebGlShaderPrecisionFormat',
    'WebGlTexture',
    'WebGlUniformLocation',
    'WebGlVertexArrayObject',
    'WebSocket',
    'Window',
]
