[package]
name = "sprite_sheet_util"
workspace = ".."
version = "0.1.0"
edition = "2018"
authors = ["Softbear, Inc."]
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sprite_sheet = {path="../sprite_sheet"}
image = { version = "0.23.14", features = ["png"], default-features = false }
crunch = "0.3.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
oxipng = "5.0.0"
imagequant = "4.0"
glam = {version = "0.18.0", features = ["serde"]}
webp = "0.1.3"
rayon = "1.5.1"
lazy_static = "1.4"