[package]
name = "sprite_sheet_util"
workspace = ".."
version = "0.1.0"
edition = "2021"
authors = ["Softbear, Inc."]
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crunch = "0.3.3"
glam = "0.18"
image = { version = "0.23.14", features = [ "png" ], default-features = false }
imagequant = "4.0"
oxipng = "5.0.0"
rayon = "1.5.1"
serde = "1.0"
serde_json = "1.0"
sprite_sheet = { path = "../sprite_sheet" }
linreg = "0.2"
srgb = "0.1.0"
