[package]
name = "upload_game_client"
workspace = ".."
version = "0.1.0"
edition = "2021"

[dependencies]
minicdn = "0.1.13"
core_protocol = {path = "../core_protocol", features = ["admin"]}
reqwest = {version = "0.11", features = ["blocking"]}
structopt = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"